<resources>
    <string name="app_name">KA19NEWS</string>
    <string name="my_news">My News</string>
    <string name="headlines">Headlines</string>
    <string name="favourites">Favourites</string>

    <!-- My Feed text -->
    <string name="feed_personalization_title_1">Choose what you like to fill your feed</string>
    <string name="feed_personalization_title_2">This helps us personalize your news experience.</string>
    <string name="save">save</string>

    <!-- Search Text -->
    <string name="search_hint">Search News</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="search_results_text">Search results for</string>
    <string name="no_results_found">No Results Found</string>

    <!-- Favourite Text-->
    <string name="your_favourite_is_empty_add_news_to_your_favourite_list">Your Favourite is empty. Add news to your favourite list.</string>
    <string name="share">share</string>
    <string name="favourite">favourite</string>
    <string name="select_language">Select language&#8230;</string>

    <!-- Navigation Drawer Text-->
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="feedback">Feedback</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_feed">My Feed</string>
    <string name="follow_us">Follow Us</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <!-- Welcome Screen Title and Description-->

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome to KA19NEWS</string>
    <string name="slide_1_desc">New dimension of news reading and sharing at your finger tips</string>
    <string name="slide_2_title">User-friendly</string>
    <string name="slide_2_desc">User-friendly application design with categorized contents, anyone at any age can use this simply </string>
    <string name="slide_3_title">Get latest news of Mangaluru</string>
    <string name="slide_3_desc">Get latest news of Mangaluru within minutes ,know the events before no one else does!!</string>
    <string name="slide_4_title">Get latest news from all around the world</string>
    <string name="slide_4_desc">Also get notified latest news from all around the globe</string>
    <string name="world">world</string>
    <string name="maps">maps</string>
    <string name="shaking_hands">shaking_hands</string>
    <string name="title_placeholder_text">Trial of the Day</string>
    <string name="category_placeholder_text">sports</string>
    <string name="time_placeholder_text">9 hours ago</string>
    <string name="newspaper">newspaper</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="login_info_text">Enter your mobile number, we will send you  \n\t\t\t\t\t\t\t\t\t OTP to verify later</string>
    <string name="done">Done</string>
    <string name="otp_info_text">Enter 4 digit number that sent to</string>
    <string name="phone_number_hint">10 digit mobile number</string>
    <string name="continue_btn_string">Continue</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="address_hint">Enter your address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="register_btn">Register</string>
    <string name="personal_information">Personal Information</string>
    <string name="upload">Upload</string>
    <string name="other">Other</string>
    <string name="add_news">Add News</string>
    <string name="news_posted">News Posted</string>
    <string name="news_accepted">News Accepted</string>
    <string name="view_news">View News</string>

    <!-- user and app status -->
    <string name="logged_in_status">logged_in</string>
    <string name="logged_out_status">logged_out</string>
    <string name="reader_writer_status">reader_writer</string>
    <string name="reader_status">reader</string>
    <string name="writer_status">writer</string>

    <!-- languages   -->
    <string name="english_language">English</string>
    <string name="zero">0</string>
    <string name="click_to_add_image">Click to Add Image</string>
    <string name="select_language_hint">Select Language</string>
    <string name="select_category_hint">Select Category</string>
    <string name="news_title_hint">News Title</string>
    <string name="arrow_content_descp">arrow</string>
    <string name="news_content_hint">Type your news content here......</string>
    <string name="next_btn">Next</string>
    <string name="change_image_btn">Change Image</string>
    <string name="remove_image_btn">Remove Image</string>
    <string name="send">Send</string>
    <string name="ok_btn">OK</string>
    <string name="news_uploaded_succesfully">News uploaded successfully</string>
    <string name="preview">Preview</string>
    <string name="logout">Logout</string>
    <string name="become_n_ka19news_n_contributer">Become   ka19news   Contributor</string>
    <string name="account_caps">ACCOUNT</string>
    <string name="login_create">Login/Create account to contribute news</string>
    <string name="update_btn">Update</string>
    <string name="mobile_number_hint">Enter your mobile number</string>
    <string name="by">by</string>
    <string name="status_rejected">status: rejected</string>
    <string name="status_pending">status: pending</string>
    <string name="status_accepted">status: accepted</string>
    <string name="edited_by">Edited by</string>

</resources>
