<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.MyFeedPersonalizationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feed_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_personalization_title_1"
        app:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feed_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_personalization_title_2"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/feed_title_1"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/feed_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/feed_title_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="18dp"
        app:cornerRadius="20dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/feed_chip_group"
        app:layout_constraintRight_toRightOf="parent"/>


    <RelativeLayout
        android:id="@+id/bg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#72B3E5FC"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>